<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StateChangeActivity"
    android:id="@+id/StateChangeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_on_wifi"
                android:id="@+id/button_on_wifi"
                android:clickable="true" />



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_off_wifi"
                android:id="@+id/button_off_wifi"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wifi ON or OFF ?"
                android:id="@+id/myTextViewStatusWifi"
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Localisation"
                android:id="@+id/textViewLocalisation"
            />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLocalisation"
                android:text="@string/editTextLocalisationWIFI"
                android:editable="true"
                android:enabled="true"
                android:inputType="text"
                android:visibility="visible"
            />
        </LinearLayout>

         <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

             <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GPS"
                android:id="@+id/button_gps"
            />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Position GPS"
                 android:id="@+id/mytextViewCaptureGPS"
                 android:layout_below="@+id/editTextLocalisation"
                 android:layout_alignParentStart="true" />

         </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
            android:weightSum="1">

             <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/myTextPositionGPSLong"
                android:text="GPS Long"
                android:enabled="true"
                android:inputType="text"
                android:layout_below="@+id/myTextPositionGPSLat"
                android:layout_alignStart="@+id/myTextPositionGPSLat"
             />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/myTextPositionGPSLat"
                android:text="GPS Lat"
                android:enabled="true"
                android:inputType="text"
                android:layout_below="@+id/mytextViewCaptureGPS"
                android:layout_alignStart="@+id/editTextLocalisation" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dans un certain rayon"
                android:id="@+id/textViewProximité"
            />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextRayonGPS"
                android:text="@string/editTextRayonGPS"
                android:editable="false"
                android:enabled="true"
                />


        </LinearLayout>




        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dans une certaine Plage Horaire"
                android:id="@+id/textViewHoraire"
                android:layout_below="@+id/editTextRayonGPS"
                android:layout_alignParentStart="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editTextHoraireDébut"
                android:text="@string/editTextHoraireDebut"
                android:enabled="true"
                android:editable="false"
            />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/editTextHoraireFin"
                android:text="@string/editTextHoraireFin"
                android:editable="false"
                android:enabled="true"
             />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
